<resources>
    <string name="app_name">Trivia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="fruit"></string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="reset">RESET</string>
    <string name="label_name">Topic</string>
    <string name="label_Op1">Option1</string>
    <string name="label_Op2">Option2</string>
    <string name="label_Op3">Option3</string>
    <string name="label_Op4">Option4</string>
    <string name="label_ans">Answer</string>
    <string name="button_add">ADD</string>
    <string name="button_back">BACK</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>