<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/label_topic"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"/>

    <EditText android:id="@+id/input_topic"
        android:layout_toRightOf="@+id/label_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_topic"
        android:layout_marginLeft="50dp"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/label_O1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_topic"
        android:layout_marginTop="50dp"
        android:text="@string/label_Op1"/>

    <EditText android:id="@+id/input_O1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_O1"
        android:layout_alignLeft="@+id/input_topic"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_O1"
        />

    <TextView
        android:id="@+id/label_O2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_O1"
        android:layout_marginTop="50dp"
        android:text="@string/label_Op2"/>

    <EditText android:id="@+id/input_O2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_O2"
        android:layout_alignLeft="@+id/input_O1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_O2"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/label_O3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_O2"
        android:layout_marginTop="50dp"
        android:text="@string/label_Op3"/>

    <EditText android:id="@+id/input_O3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_O3"
        android:layout_alignLeft="@+id/input_O2"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_O3"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/label_O4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_O3"
        android:layout_marginTop="50dp"
        android:text="@string/label_Op4"/>

    <EditText android:id="@+id/input_O4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_O4"
        android:layout_alignLeft="@+id/input_O3"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_O4"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/label_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_O4"
        android:layout_marginTop="50dp"
        android:text="@string/label_ans"/>

    <EditText android:id="@+id/input_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_ans"
        android:layout_alignLeft="@+id/input_O4"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_ans"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_ans"
        android:layout_marginTop="50dp"
        android:onClick="insert"
        android:text="@string/button_add"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_add"
        android:layout_marginTop="50dp"
        android:onClick="goBack"
        android:text="@string/button_back"/>

</RelativeLayout>